--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,29 +1,50 @@
-terraform {
-  required_version = "1.5.7"
+name: 'Terraform'
 
-required_providers {
-  digitalocean = {
-    source = "digitalocean/digitalocean"
-    version = "2.0"
-  }
-}
-}
+on:
+  push:
+    branches:
+    - main
+    paths-ignore:
+    - '.github/workflows/terraform.yml'
+    - 'README.md'
+  pull_request:
 
-provider "digitalocean" {
-  token = "dop_v1_8d036bc3dfd28afcb12b5691486308dd116c0b5d2d35109b39fd16ffb13f84ca"
-}
+jobs:
+  terraform:
+    name: 'Terraform'
+    runs-on: ubuntu-latest
+    environment: production
 
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
 
-resource "digitalocean_kubernetes_cluster" "web" {
-  name    = "web"
-  region  = "nyc1"
-  version = "1.28.2-do.0"
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v2
 
-  node_pool {
-    name       = "autoscale-worker-pool"
-    size       = "s-2vcpu-2gb"
-    auto_scale = true
-    min_nodes  = 1
-    max_nodes  = 5
-  }
-}
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
+      run: terraform fmt -check
+
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+
+      # On push to main, build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve
